--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -9,7 +9,7 @@
 }
 
 .wide-header {
-    background-color: #fff;
+    background-color: var(--header-bg-color);
     box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
 }
 
