--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,6 +1,7 @@
 .narrow-header,
 .wide-header {
     top: 0;
+    position: fixed;
     width: 100%;
     z-index: 500;
     /* background-image: url("../../public/bg.jpg"); */
