--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -84,7 +84,14 @@
 
 .wide-dropdown:hover .dropdown-items {
     display: block;
-    width: 150px;
+    width: 132px;
+    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+}
+
+
+.wide-dropdown.open .dropdown-items {
+    display: block;
+    width: 132px;
     box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
 }
 
