changed colour on narrow_nav_menu text

--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -15,7 +15,7 @@
         line-height: 32px;
 
         background-color: #0a0a0a;
-        color: #000;
+        color: white;
         text-align: left;
     }
 
