--- a/src/css/committee/EventU.css
+++ b/src/css/committee/EventU.css
@@ -9,19 +9,19 @@
     padding-bottom: 24px;
 }
 
-.EventU-Title {
+.EventU-Title,
+.EventU-Sub-Title {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 90%;
+    margin: 1em auto;
 }
 
-.EventU-Desc, .EventU-Sub-Desc {
-    width: 95%;
+.EventU-Desc,
+.EventU-Sub-Desc {
+    width: 90%;
     text-align: left;
     margin: auto;
     overflow-wrap: break-word;
-}
-
-.EventU-Sub-Title {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .EventU-Contact {
