--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -287,3 +287,64 @@ button {
     background-color: lightgray;
     text-align: left;
 }
+
+
+/*Button css*/
+#divThemeToggle{
+    position: relative;
+}
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 14px;
+}
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #fff;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
+}
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 30px;
+    width: 30px;
+    left: 0px;
+    bottom: 4px;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
+    background: #fff;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+input:checked + .slider:before {
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
+    background: white;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.slider.round {
+    border-radius: 34px;
+}
+.slider.round:before {
+    border-radius: 50%;
+}
