--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,9 @@ code {
     --footer-bg-color-light: #f8f8f8;
     --widget-title-border-color-light: #ddd;
     --widget-title-bg-color-light: hsla(0, 0%, 82%, .3);
+    --webkit-scrollbar-track: #f8f8f8;
+    --webkit-scrollbar-thumb: #f8f8f8;
+    --webkit-scrollbar-thumb:hover: #f8f8f8;
 
     /* Dark mode colors */
     --text-color-dark: #fff;
@@ -35,6 +38,11 @@ code {
     --footer-bg-color-dark: #111919;
     --widget-title-border-color-dark: #333; 
     --widget-title-bg-color-dark: hsla(0, 0%, 30%, .3); 
+    --display-dark-logo: none;
+    --webkit-scrollbar-track: #333;
+    --webkit-scrollbar-thumb: #333;
+    --webkit-scrollbar-thumb:hover: #333;
+   
 
     /* Current colors, initially set to light mode */
     --text-color: var(--text-color-light);
@@ -44,5 +52,6 @@ code {
     --footer-bg-color: var(--footer-bg-color-light);
     --widget-title-border-color: var(--widget-title-border-color-light);
     --widget-title-bg-color: var(--widget-title-bg-color-light);
+    --display-light-logo: inline-block;
     
 }
