--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -6,6 +6,12 @@
 
         width: 100%;
         height: 32px;
+        height: fit-content;
+    }
+
+    .narrow-nav-menu {
+        background-color: #000;
+        height: fit-content;
     }
 
     .nav-button {
@@ -13,13 +19,17 @@
         padding: 3px 10px 3px 10px;
         width: 100%;
         line-height: 32px;
-
+        margin: 2px;
         background-color: #0a0a0a;
         color: white;
         text-align: left;
     }
 
-    .nav-button:hover,
+    a.navButton {
+        color: #fff;
+    }
+
+    .nav-button:hover, .navButton:hover,
     .narrow-dropdown .dropdown-nav-button:hover {
         color: #F7E623;
     }
@@ -60,6 +70,7 @@
         display: none;
     }
 }
+
 
 .reg-nav-button {
     cursor: pointer;
