--- a/src/css/PostPreview.css
+++ b/src/css/PostPreview.css
@@ -16,7 +16,7 @@
 
 .PostPreview-Title a {
     text-decoration: none;
-    color: #333;
+    /* color: #333; */
 }
 
 .PostPreview-Date {
@@ -24,7 +24,7 @@
     line-height: 1.3;
     margin-top: 2px;
     text-align: left;
-    color: #333;
+    /* color: #333; */
     font-family: "Asap", Arial, sans-serif;
     font-weight: 300;
     padding-top: 6px;
@@ -35,14 +35,14 @@
     width: 100%;
     padding-bottom: 36px;
     overflow: hidden;
-    color: #555;
+    /* color: #555; */
     font-family: Arial, sans-serif;
     font-size: 14px;
     text-align: left;
 }
 
 .PostPreview-Content p {
-    color: #555;
+    /*color: #555;*/
     word-wrap: break-word;
     line-height: 1.6875;
 }
