--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -3,7 +3,6 @@
         display: grid;
         grid-template-columns: 100%;
         justify-content: left;
-
         width: 100%;
         height: 32px;
     }
@@ -13,7 +12,6 @@
         padding: 3px 10px 3px 10px;
         width: 100%;
         line-height: 32px;
-
         background-color: #0a0a0a;
         color: white;
         text-align: left;
@@ -79,20 +77,19 @@
     position: absolute;
     left: 0;
     top: 100%;
-    background-color: #fff;
 }
 
 .wide-dropdown:hover .dropdown-items {
     display: block;
-    width: 132px;
     box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+    background-color:var(--navbar-dropdown-bg-color);
 }
 
 
 .wide-dropdown.open .dropdown-items {
     display: block;
-    width: 132px;
     box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+    background-color:var(--navbar-dropdown-bg-color);
 }
 
 .wide-dropdown .dropdown-nav-button {
@@ -186,7 +183,6 @@ button {
 .page-nav-button {
     width: 32px;
     height: 32px;
-
     background: #f8f8f8;
     color: #000;
     box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
@@ -295,63 +291,15 @@ button {
     text-align: left;
 }
 
-
-/*Button css*/
-#divThemeToggle{
-    position: relative;
-}
-
-/* The switch - the box around the slider */
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 50px;
-    height: 14px;
-}
-/* Hide default HTML checkbox */
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #fff;
-    -webkit-transition: 0.2s;
-    transition: 0.2s;
-}
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 30px;
-    width: 30px;
-    left: 0px;
-    bottom: 4px;
-    top: 0;
-    bottom: 0;
-    margin: auto 0;
-    -webkit-transition: 0.2s;
-    transition: 0.2s;
-    background: #fff;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-input:checked + .slider:before {
-    -webkit-transform: translateX(20px);
-    -ms-transform: translateX(20px);
-    transform: translateX(20px);
-    background: white;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.slider.round {
-    border-radius: 34px;
-}
-.slider.round:before {
-    border-radius: 50%;
+#dmode{
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  background-color: var(--button-bg-color);
+  color: var(--button-text-color);
 }
