--- a/src/css/committee/Utskott.css
+++ b/src/css/committee/Utskott.css
@@ -1,3 +1,9 @@
+/* only need if we don't use navbar, remove?*/
+body > .utskott {
+    background-color: var(--utskott-bg-color);
+    color: var(--utskott-text-color);
+}   
+
 .utskott img{
     margin-top: 8px;
     height: 256px;
