navbar blir för bred vid inzoomning - radbryt eller byt till narrownav?
esc på dropdown måste funka även om man hovrar över den (måste vara dissmissible)

Co-authored-by: CitronMelon <CitronMelon@users.noreply.github.com>

--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -33,6 +33,7 @@
 
     a.dropdown-nav-button:hover, .nav-button:hover {
         color: #F7E623;
+        cursor: pointer;
     }
 
     .wide-dropdown {
@@ -112,6 +113,7 @@
     .wide-dropdown:hover .nav-button,
     a.dropdown-nav-button:hover,
     .nav-button:hover {
+        cursor: pointer;
         color: #F7E623;
     }
 
@@ -128,6 +130,7 @@
     }
 
     .wide-dropdown:hover .dropdown-items {
+        cursor: pointer;
         display: block !important;
     }
 
