inte längre två olika objekt för narrow och wide, nu ändras de med bara css (om jag inte missat något). bör fixa global variabel ist för att skriva 900px överallt (beter sig konstigt om man inte ändrar överallt). (denna branch kanske bör mergeas med Tillgänglighet innan dev eftersom den är byggd på den)

--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -1,7 +1,7 @@
 /* NarrowNav */
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
     .site-nav {
-        display: grid;
+        display: none;
         grid-template-columns: 100%;
         justify-content: left;
 
@@ -9,9 +9,6 @@
         height: 32px;
         height: fit-content;
         margin-right: 0;
-    }
-
-    .narrow-nav-menu {
         background-color: #000;
         height: fit-content;
     }
@@ -36,17 +33,16 @@
         cursor: pointer;
     }
 
-    .wide-dropdown {
-        display: none;
-    }
-
     .hamburger {
-        position: fixed;
+        display: block;
+        position: absolute;
         right: 0;
-        margin-top: 10px;
-        margin: -2em 1em auto auto;
+        margin: -2em 1em auto auto; 
+        /* använd samma enhet som height i ".narrow-header .logo-container"
+        i Header.css */
         /* varför syns den på vissa datorer men inte andra? */
         color: #fff;
+        padding: 0;
     }
     
     .hamburger:hover {
@@ -54,7 +50,7 @@
         color: #F7E623;
     }
     
-    .narrow-dropdown .dropdown-nav-button {
+    .dropdown .dropdown-nav-button {
         display: block;
         border-top: 0.5px solid #3b3b3b;
         padding: 5px 5px 5px 35px;
@@ -69,15 +65,13 @@
 
     a.reg-nav-button {
         border-top: 0.5px solid #3b3b3b;
+        display: block;
     }
     
-    .narrow-dropdown .dropdown-items {
+    .dropdown-items {
         width: 100%;
         z-index: 2;
         overflow-wrap: break-word;
-    }
-
-    .dropdown-items {
         contain: content;
     }
 
@@ -89,9 +83,9 @@
 }
 
 /* WideNav */
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 900px) {
     .site-nav {
-        display: flex;
+        display: flex !important;
         justify-content: center;
         width: 100%;
         height: 48px;
@@ -110,38 +104,31 @@
         transition: 0.4s;
     }
 
-    .wide-dropdown:hover .nav-button,
+    .dropdown:hover .nav-button,
     a.dropdown-nav-button:hover,
     .nav-button:hover {
         cursor: pointer;
         color: #F7E623;
     }
 
-    .narrow-dropdown {
-        display: none;
-    }
-
-    .wide-dropdown .dropdown-items {
+    .dropdown-items {
         display: none;
         position: absolute;
         left: 0;
         top: 100%;
         background-color: #fff;
-    }
-
-    .wide-dropdown:hover .dropdown-items {
-        cursor: pointer;
-        display: block !important;
-    }
-
-    .dropdown-items {
         width: fit-content;
         min-width: 100%;
         max-width: 20em;
         box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
     }
+
+    .dropdown:hover .dropdown-items {
+        cursor: pointer;
+        display: block !important;
+    }
     
-    .wide-dropdown .dropdown-nav-button {
+    .dropdown .dropdown-nav-button {
         display: block;
         padding: 5px 5px 5px 5px;
         text-align: left;
@@ -150,16 +137,21 @@
         /* NOTE: longer than original site, why? */
     }
     
-    .wide-dropdown {
+    .dropdown {
         position: relative;
     }
 
     .button-layout > p, .button-layout > img {
         margin: 0;
     }
+
+    .hamburger {
+        display: none;
+    }
 }
 
 .button-layout {
+    /* För bild + namn i utskottsmenyn */
     display: flex;
 }
 
@@ -187,6 +179,7 @@ button {
 }
 
 .dropdown-nav-button .dropdown-icon {
+    /* För de små bilderna brevid utskottsnamnen */
     max-width: 24px; 
     max-height: 24px; 
     margin-right: 8px; 
