--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -120,9 +120,14 @@
         box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
     }
 
-    .dropdown:hover .dropdown-items {
+    .yes-dropdown:hover .dropdown-items {
         cursor: pointer;
         display: block !important;
+    }
+
+    .no-dropdown:hover .dropdown-items {
+        cursor: pointer;
+        display: none !important;
     }
     
     .dropdown .dropdown-nav-button {
