--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -7,7 +7,6 @@
         width: 100%;
         height: fit-content;
         margin-right: 0;
-        background-color: #000;
     }
 
     .narrow-header {
@@ -20,6 +19,7 @@
         padding: 3px 10px 3px 10px;
         width: 100%;
         line-height: 32px;
+        margin: 2px;
         background-color: #0a0a0a;
         color: white;
         text-align: left;
@@ -92,12 +92,11 @@
     .nav-button {
         margin: 0 6px 0 6px;
         padding: 0 14px 0 14px;
-        font-size: 24px;
+        font-size: 1.12em;
         height: 32px;
         line-height: 32px;
         background-color: var(--navbar-bg-color);
-        /* color: var(--navbar-text-color); */
-        color: black;
+        color: var(--button-text-color);
         transition: 0.4s;
     }
 
@@ -113,7 +112,7 @@
         position: absolute;
         left: 0;
         top: 100%;
-        background-color: #fff;
+        background-color:var(--navbar-dropdown-bg-color);
         width: fit-content;
         min-width: 100%;
         max-width: 20em;
@@ -206,7 +205,7 @@
     margin-top: 10px;
     margin: -30px 12px auto auto;
     /* varför syns den på vissa datorer men inte andra? */
-    color: #fff;
+    color: var(--button-text-color);
 }
 
 .hamburger:hover {
@@ -220,7 +219,7 @@
     padding: 5px 5px 5px 35px;
     width: 100%;
     text-decoration: none;
-    background-color: #121212;
+    background-color:var(--navbar-dropdown-bg-color);
     color: #fff;
     text-align: left;
     transition: 0.4s;
