--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -1,6 +1,4 @@
-
-
-.eventbox{
+.eventbox {
     width: 100%;
     top: 10%;
     margin-bottom: 10px;
@@ -28,7 +26,7 @@
     margin-top: 5px;
     width: 100%;
     text-align: center;
-    overflow-wrap: break-word; 
+    overflow-wrap: break-word;
     white-space: normal
 }
 
@@ -41,7 +39,7 @@
     white-space: normal;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 3; 
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
 }
 
@@ -63,17 +61,21 @@
 }
 
 .modal-content {
-    background-color: white;
+    background-color: var(--bg-color);
     padding: 20px;
     border-radius: 10px;
-    width: 80%; 
-    max-width: 500px; 
-    box-sizing: border-box; 
+    width: 80%;
+    max-width: 500px;
+    box-sizing: border-box;
+}
+
+.modal p {
+    color: var(--text-color);
 }
 
 @media (max-width: 600px) {
     .modal-content {
-        width: 80%; 
+        width: 80%;
     }
 }
 
