wip: css variables

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,25 +1,120 @@
+/* NextJS defaults */
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 html,
 body {
-  max-width: 100vw;
-  min-height: 100vh;
-  overflow-x: hidden;
+    max-width: 100vw;
+    min-height: 100vh;
+    overflow-x: hidden;
 }
 
 body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
+/* Variables */
 :root {
+    /*
+    Theme colors are defined as <R> <G> <B> that they
+    can be applied with various opacities.
+    */
+    --theme-background: /* #ffffff */ 255 255 255;
+    --theme-on-background: /* #333333 */ 51 51 51;
+
+    /* "Pixels" logo colors */
+    --theme-pixels-pink: /* #e5398d */ 229 57 141;
+    --theme-pixels-blue: /* #1e427e */ 30 66 126;
+    --theme-pixels-green: /* #70be44 */ 112 190 68;
+    --theme-pixels-yellow: /* #f5e81d */ 245 232 29;
+    --theme-pixels-brown: /* #764122 */ 118 65 34;
+
+    /* This is a terrible color combination */
+    --theme-primary: var(--theme-pixels-pink);
+    --theme-on-primary: var(--theme-pixels-yellow);
+
+    /* Fonts, 1rem = 16px */
+    --ff-display: "asap", "Arial", sans-serif;
+    --ff-body: "Arial", sans-serif;
+
+    --font-base: 0.875rem / 1.6875 var(--ff-body);
+    --font-button: 0.875rem / 1 var(--ff-display);
+    --font-heading-lg: 1.75rem / 1.2 var(--ff-display);
+    --font-heading-md: 1.25rem / 1.2 var(--ff-display);
+    --font-heading-sm: 1rem / 1.2 var(--ff-display);
+    --font-heading-xs: uppercase 0.875rem / 1.2 var(--ff-display);
+
+    /* Spacing, WIP */
+    --spacing-xs: 0.25rem;
+    --spacing-sm: 0.5rem;
+    --spacing-md: 0.75rem;
+    --spacing-lg: 1rem;
+    --spacing-xl: 1.5rem;
+
+    /* Shadows, WIP */
+    --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 5%);
+    --shadow: 0 1px 3px 0 rgb(0 0 0 / 10%);
+    --shadow-lg: 0 4px 5px 0 rgb(0 0 0 / 10%);
+
+    /* Border radius */
+    --rounded-sm: 0.25rem;
+    --rounded: 0.5rem;
+    --rounded-lg: 1rem;
+
+    /* Transition */
+    --ease-out: 0.125s ease-out;
+    --ease-in: 0.125s ease-in;
+    --ease-in-out: 0.125s ease-in-out;
+}
+
+/* Apply to all elements, so that individual components can override theming */
+* {
+    /* Colors and opacity variants */
+    --color-background: rgb(var(--theme-background));
+    --color-on-background: rgb(var(--theme-on-background));
+    --color-primary: rgb(var(--theme-primary));
+    --color-on-primary: rgb(var(--theme-on-primary));
+
+    --color-background-muted: rgb(var(--theme-background) / 60%);
+    --color-on-background-muted: rgb(var(--theme-on-background) / 60%);
+    --color-primary-muted: rgb(var(--theme-primary) / 60%);
+    --color-on-primary-muted: rgb(var(--theme-on-primary) / 60%);
+
+    --color-background-subtle: rgb(var(--theme-background) / 15%);
+    --color-on-background-subtle: rgb(var(--theme-on-background) / 15%);
+    --color-primary-subtle: rgb(var(--theme-primary) / 15%);
+    --color-on-primary-subtle: rgb(var(--theme-on-primary) / 15%);
+
+    /* Prefer not to use these directly */
+    --color-pixels-pink: rgb(var(--theme-pixels-pink));
+    --color-pixels-blue: rgb(var(--theme-pixels-blue));
+    --color-pixels-green: rgb(var(--theme-pixels-green));
+    --color-pixels-yellow: rgb(var(--theme-pixels-yellow));
+    --color-pixels-brown: rgb(var(--theme-pixels-brown));
+}
+
+html {
+    font-size: 16px;
+}
+
+/* Globals */
+body {
+    font: var(--font-base);
+    background-color: var(--color-background);
+    color: var(--color-on-background);
+}
+
+*:focus {
+    outline: 2px solid var(--color-primary);
+    outline-offset: 2px;
+    border-radius: var(--rounded);
 }
