--- a/src/components/NavbarItem/NavbarItem.module.css
+++ b/src/components/NavbarItem/NavbarItem.module.css
@@ -57,7 +57,17 @@
 }
 
 .subItem .subMenu {
-    top: 0;
+    top: var(--size-xs);
     right: 0;
     transform: translateX(100%);
+    transition:
+        opacity var(--ease-out),
+        top var(--ease-out);
+}
+
+.subItem:hover > .subMenu,
+.subItem:focus > .subMenu,
+.subItem:focus-within > .subMenu {
+    bottom: 0;
+    top: 0;
 }
