--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -21,4 +21,19 @@
 
 .logo {
     margin-top: var(--size-xl);
+    opacity: 100%;
+    height: 100px;
+    transform: translateY(0);
+    transition:
+        margin-top var(--ease-out),
+        height var(--ease-out),
+        opacity var(--ease-out),
+        transform var(--ease-out);
+}
+
+:global(.scrolled) .logo {
+    margin-top: 0;
+    opacity: 0%;
+    height: 0;
+    transform: translateY(calc(-1 * var(--size-xl))) scale(0.8);
 }
