--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,51 +97,17 @@ a {
     --color-pixels-brown: rgb(var(--theme-pixels-brown));
 
     /* color-mix is baseline, sucks if you don't support it */
-    --color-base-1: color-mix(
-        in lch,
-        var(--color-background),
-        var(--color-on-background) 10%
-    );
-    --color-base-2: color-mix(
-        in lch,
-        var(--color-background),
-        var(--color-on-background) 20%
-    );
-    --color-base-3: color-mix(
-        in lch,
-        var(--color-background),
-        var(--color-on-background) 30%
-    );
-    --color-base-4: color-mix(
-        in lch,
-        var(--color-background),
-        var(--color-on-background) 40%
-    );
-    --color-base-5: color-mix(
-        in lch,
-        var(--color-background),
-        var(--color-on-background) 50%
-    );
-    --color-base-6: color-mix(
-        in lch,
-        var(--color-background),
-        var(--color-on-background) 60%
-    );
-    --color-base-7: color-mix(
-        in lch,
-        var(--color-background),
-        var(--color-on-background) 70%
-    );
-    --color-base-8: color-mix(
-        in lch,
-        var(--color-background),
-        var(--color-on-background) 80%
-    );
-    --color-base-9: color-mix(
-        in lch,
-        var(--color-background),
-        var(--color-on-background) 90%
-    );
+    --base-from: var(--color-background);
+    --base-to: var(--color-on-background);
+    --color-base-1: color-mix(in lch, var(--base-from), var(--base-to) 2%);
+    --color-base-2: color-mix(in lch, var(--base-from), var(--base-to) 5%);
+    --color-base-3: color-mix(in lch, var(--base-from), var(--base-to) 10%);
+    --color-base-4: color-mix(in lch, var(--base-from), var(--base-to) 17%);
+    --color-base-5: color-mix(in lch, var(--base-from), var(--base-to) 26%);
+    --color-base-6: color-mix(in lch, var(--base-from), var(--base-to) 37%);
+    --color-base-7: color-mix(in lch, var(--base-from), var(--base-to) 52%);
+    --color-base-8: color-mix(in lch, var(--base-from), var(--base-to) 68%);
+    --color-base-9: color-mix(in lch, var(--base-from), var(--base-to) 85%);
 
     /* Transition */
     --ease-speed: 0.125s;
